--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/jest": "^23.3.9",
+    "@types/node": "^10.12.4",
+    "@types/react": "^16.7.1",
+    "@types/react-dom": "^16.0.9",
+    "antd": "^3.10.5",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "typescript": "^3.1.6"
   },
   "scripts": {
     "start": "react-scripts start",
