--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@types/node": "^10.12.4",
     "@types/react": "^16.7.1",
     "@types/react-dom": "^16.0.9",
+    "@types/styled-components": "^4.0.3",
     "antd": "^3.10.5",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
-    "react-scripts": "2.1.1",
+    "react-scripts": "^2.1.1",
+    "styled-components": "^4.0.3",
     "typescript": "^3.1.6"
   },
   "scripts": {
